--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'open'
+          distribution: 'openjdk'
 
       - name: Build with Maven
         run: mvn clean install -DskipTests
